[project]
name = "byteomnidiffus-rlm-hyperagi"
authors = [{name = "getwinharris"}]
version = "0.2.0"
description = "Scratch rebuild for diffusion-style combined remote model-weight records."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/getwinharris/ByteOmniDiffus-RLM-HyperAGI"
Repository = "https://github.com/getwinharris/ByteOmniDiffus-RLM-HyperAGI"
Issues = "https://github.com/getwinharris/ByteOmniDiffus-RLM-HyperAGI/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = []

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
test = [
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
